--- a/src/css/style.css
+++ b/src/css/style.css
@@ -19,6 +19,22 @@
     --ff-task-done: rgb(134, 134, 134);
 }
 
+.sr-only {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+
+    padding: 0;
+    margin: -1px;
+    
+    overflow: hidden;
+    
+    clip: rect(0,0,0,0);
+    white-space: nowrap;
+    border-width: 0;
+}
+
+
 body {
     background-color: rgb(238, 238, 238);
     height: 100vh;
